# CppProject

.git-cleanCppProject/: index  packed-refs
.git-cleanCppProject/logs/: HEAD
.git-cleanCppProject/objects/pack/: pack-8efc7e6067e102a27ef80e56e7b01c94ad41b66b.idx  pack-8efc7e6067e102a27ef80e56e7b01c94ad41b66b.pack
.git-cleanCppProject/refs/heads/: master
source/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp  version.h
source/algorithms/: CMakeLists.txt  bubbleSort.cpp  bubbleSort.h
source/design-patterns/: CMakeLists.txt  factory.cpp
source/unittest/: CMakeLists.txt  testmain.cpp
source/unittest/testBubbleSort/: CMakeLists.txt  testBubbleSort.cpp  testBubbleSort.h
source/unittest/testfoo/: CMakeLists.txt
test/: CMakeLists.txt
